--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     border: none;
     font-family: Roboto, Arial, sans-serif;    
 }
-.display.none {
+.displaynone {
   display: none;
 }
 body{
@@ -152,7 +152,7 @@ body{
   padding-top: 40px;
   padding-left: 50px;
   padding-bottom: 20px;
-  display: flex;
+  /* display: flex; */
 }
 .main{
   display: flex;
@@ -205,6 +205,18 @@ form{
   align-items: center;
   justify-content: center;
 }
+/* .libelleposition{
+  position:fixed;
+  background-color:rgba(219, 8, 8, 0);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  /* display: flex; */
+  /* justify-content: center;
+  align-items: center;
+} */ */
 #submit{
   background-color: #0b57d0;
   height: 2rem;
